--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "main": "dist/index.js",
     "scripts": {
         "start": "node dist/index.js",
+        "predev": "npx -y kill-port 3001",
         "dev": "nodemon src/index.ts",
         "build": "tsc"
     },
