--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
 {
     "rewrites": [
         {
+            "source": "/api/(.*)",
+            "destination": "/backend/src/index.ts"
+        },
+        {
             "source": "/(.*)",
             "destination": "/index.html"
         }
-    ]
+    ],
+    "functions": {
+        "backend/src/index.ts": {
+            "maxDuration": 60
+        }
+    }
 }
