--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^143.0.4",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "express": "^5.2.1",
     "hls.js": "^1.6.15",
     "lucide-react": "^0.562.0",
+    "puppeteer-core": "^24.35.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
