--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,11 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/backend/src/index.ts"
+            "destination": "/api/index.ts"
         },
         {
             "source": "/(.*)",
             "destination": "/index.html"
         }
-    ],
-    "functions": {
-        "backend/src/index.ts": {
-            "maxDuration": 60
-        }
-    }
+    ]
 }
