--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lucide-react": "^0.562.0",
     "puppeteer-core": "^24.35.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
