--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,14 @@
     },
     "dependencies": {
         "@types/cheerio": "^0.22.35",
+        "@upstash/redis": "^1.36.1",
         "axios": "^1.6.0",
         "cheerio": "^1.1.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "fuse.js": "^7.1.0",
+        "graphql-request": "^7.4.0",
         "puppeteer-extra": "^3.3.6",
         "puppeteer-extra-plugin-stealth": "^2.11.2"
     },
